--- a/.env
+++ b/.env
@@ -69,6 +69,6 @@ DISCOUNT_PRECENT_FOR_MAX_PRICE=7
 
 # # ========= CONFIG =========
 IS_USED_MIGVAN=false
-IS_ONLINE_PRICE=true
-IS_ONLINE_STOCK=true
+IS_ONLINE_PRICE=false
+IS_ONLINE_STOCK=flase
 IS_ONLINE_MIGVAN=false
